# vectro

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  task_multi_processor.md  tls_context_providers.md
examples/tcp/: client_main_example.h  server_main_example.h
src/vectro/: channel.h  controller.h  session.h  session_manager.h
src/vectro/frame/: framer_base.h  internal_message.cc  internal_message.h  raw_buffer.cc  raw_buffer.h  simple_line_framer.h
src/vectro/log/: log_adapter.h
src/vectro/plugin/: plugin_base.h  plugin_bundle.cc  plugin_bundle.h  plugin_key.h
src/vectro/pool/: task_multi_processor.h
src/vectro/stream/: write_queue_sg.h
src/vectro/tcp/: tcp_acceptor_interface.h  tcp_acceptor_loop.h  tcp_client.h  tcp_server.h
src/vectro/tls/: ca_verified_tls_client_context_provider.cc  ca_verified_tls_client_context_provider.h  default_tls_client_context_provider.cc  default_tls_client_context_provider.h  reloadable_tls_context_provider.cc  reloadable_tls_context_provider.h  self_signed_tls_client_context_provider.cc  self_signed_tls_client_context_provider.h  tls_client_context_provider.h  tls_context_provider.h
src/vectro/tls/detail/: stream_traits.h
tests/: CMakeLists.txt
tests/frame/rawbuffer/: rawbuffer_test.cc
tests/pool/task_multi_processor/: task_multi_processor_test.cc
tools/: git-add-submodule.sh  git-rm-submodule.sh  git-submodules-init.sh
